log
Wed 08 May 2024 07:52:29 PM UTC: 
 tests:  1|8
total_score: 0/70
5ef2838
Wed 08 May 2024 08:00:37 PM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++++++++++---------------
 1 file changed, 34 insertions(+), 15 deletions(-)
 tests:  4|7
total_score: 5/70
bd0e707
Wed 08 May 2024 08:01:47 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
72ac7af
Wed 08 May 2024 08:04:02 PM UTC: 
 treemap.c | 37 ++++++++++++++++++++++++++++++++++++-
 1 file changed, 36 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
3a249e4
Wed 08 May 2024 08:05:52 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
f0b1f3b
Wed 08 May 2024 08:11:48 PM UTC: 
 treemap.c | 43 ++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 42 insertions(+), 1 deletion(-)
 tests:  0|0
7a72a0b
Wed 08 May 2024 08:16:09 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3de9ebd
Wed 08 May 2024 08:16:35 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
95dba35
Wed 08 May 2024 08:16:45 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
e554ffe
Wed 08 May 2024 08:16:54 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  18|3
total_score: 40/70
daf6d8b
Wed 08 May 2024 08:17:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
f5a5d91
Wed 08 May 2024 08:17:44 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 40/70
d016eae
Wed 08 May 2024 08:22:38 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
f732362
Wed 08 May 2024 08:23:50 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|0
fca4907
Wed 08 May 2024 08:27:04 PM UTC: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  0|0
0328a16
Wed 08 May 2024 08:28:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:216:19: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  216 |         return aux->parent;
      |                ~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7f310d0
Wed 08 May 2024 08:30:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
53a6878
Wed 08 May 2024 08:36:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:220:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  220 |     return;
      |     ^~~~~~
treemap.c:202:8: note: declared here
  202 | Pair * nextTreeMap(TreeMap * tree)
      |        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5ce802b
Wed 08 May 2024 08:37:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
78c5a14
Wed 08 May 2024 08:50:22 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  29|0
total_score: 70/70
a2b09a0
